# QRCode

./: .gitignore  README.md  build.gradle.kts  settings.gradle.kts
app/: build.gradle.kts  google-services.json
app/sign/debug/: qrcode_debug.jks
app/src/main/develop/: AndroidManifest.xml  proguard-rules.pro
app/src/main/develop/cpp/: CMakeLists.txt  cryptoguard.cpp
app/src/main/develop/java/com/cozs/qrcode/module/: QRApplication.java
app/src/main/develop/res/anim/: left_in.xml  right_out.xml
app/src/main/develop/res/drawable/: bg_button_4dp.xml  bg_common.xml  bg_guide_btn.xml  bg_nav_bottom.xml  bg_nav_top.xml  nav_create.xml  nav_scan.xml  nav_settings.xml  progressbar_splash.xml
app/src/main/develop/res/layout/: activity_guide.xml  activity_main.xml  activity_zxing_capture.xml  fragment_guide.xml  fragment_load.xml  fragment_zxing_capture.xml  history_list_item.xml  layout_guide.xml  widget_fast_progress_bar.xml
app/src/main/develop/res/values/: attrs.xml  colors.xml  strings.xml  styles.xml  themes.xml
app/src/main/develop/res/values-v23/: themes.xml
app/src/test/java/: CryptoGuardTest.java  MyTest.java
buildSrc/: build.gradle.kts
buildSrc/src/main/kotlin/com/deploy/plugin/: DeployExtension.kt  DeployPlugin.kt  DeployTask.kt
gradle/wrapper/: gradle-wrapper.properties
zxing/: build.gradle.kts
zxing/src/main/: AndroidManifest.xml
zxing/src/main/java/com/google/zxing/client/android/: CaptureActivity.java  CaptureActivityHandler.java  DecodeHandler.java  HelpActivity.java  Intents.java
zxing/src/main/res/layout/: capture.xml
(+123 files in other folders)
